# t3-version-updater

./: Cargo.toml  ProductPath.ini  README.md
src/: main.rs
