[package]
name = "t3-update-version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
rust-ini = "0.19.0"
serde = { version = "1.0.177", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
lazy_static = { version = "1.4.0" }

[profile.release]
strip = true
